##*****************************************************************************
## $Id: Makefile.am,v 1.1 2006-08-29 20:54:03 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

bin_SCRIPTS = \
	whatsdown
