##*****************************************************************************
## $Id: Makefile.am,v 1.2 2006-08-29 20:56:21 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

bin_SCRIPTS = \
	whatsdown

EXTRA_DIST = whatsdown
